content/products/stash/0.6.0/concepts/crds/restic.md
---
title: Restic Overview
menu:
  product_stash_0.6.0:
    identifier: restic-overview
    name: Restic
    parent: crds
    weight: 10
product_name: stash
menu_name: product_stash_0.6.0
section_menu_id: concepts
info:
  version: 0.6.0
---

> New to Stash? Please start [here](/products/stash/0.6.0/concepts/README).

# Restics

## What is Restic
A `Restic` is a Kubernetes `CustomResourceDefinition` (CRD). It provides declarative configuration for [restic](https://restic.net) in a Kubernetes native way. You only need to describe the desired backup operations in a Restic object, and the Stash operator will reconfigure the matching workloads to the desired state for you.

## Restic Spec
As with all other Kubernetes objects, a Restic needs `apiVersion`, `kind`, and `metadata` fields. It also needs a `.spec` section. Below is an example Restic object.

```yaml
apiVersion: stash.appscode.com/v1alpha1
kind: Restic
metadata:
  name: stash-demo
  namespace: default
spec:
  selector:
    matchLabels:
      app: stash-demo
  fileGroups:
  - path: /source/data
    retentionPolicyName: 'keep-last-5'
  backend:
    local:
      mountPath: /safe/data
      hostPath:
        path: /data/stash-test/restic-repo
    storageSecretName: stash-demo
  schedule: '@every 1m'
  volumeMounts:
  - mountPath: /source/data
    name: source-data
  retentionPolicies:
  - name: 'keep-last-5'
    keepLast: 5
    prune: true
```

The `.spec` section has following parts:

### spec.selector
`spec.selector` is a required field that specifies a [label selector](https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/) for the Deployments, ReplicaSets, ReplicationControllers, DaemonSets and StatefulSets targeted by this Restic. Selectors are always matched against the labels of Deployments, ReplicaSets, ReplicationControllers, DaemonSets and StatefulSets in the same namespace as Restic object itself. You can create Deployment, etc and its matching Restic is any order. As long as the labels match, Stash operator will add sidecar container to the workload.  If multiple `Restic` objects are matched to a given workload, Stash operator will error out and avoid adding sidecar container.

### spec.type
The default value for `spec.type` is `online`. For offline backup you need to specify `spec.type=offline`. For more details see [here](/products/stash/0.6.0/guides/offline_backup).

### spec.fileGroups
`spec.fileGroups` is a required field that specifies one or more directories that are backed up by [restic](https://restic.net). For each directory, you can specify custom tags and retention policy for snapshots.

 - `spec.fileGroups[].path` represents a local directory that backed up by `restic`.
 - `spec.fileGroups[].tags` is an optional field. This can be used to apply one or more custom tag to snapshots taken from this path.
 - `spec.fileGroups[].retentionPolicyName` is an optional field that is used to specify a retention policy defined in `spec.retentionPolicies`. This defines how old snapshots are forgot by `restic`. If set, these options directly translate into flags for `restic forget` command.

### spec.retentionPolicies

`spec.retentionPolicies` defines a array of retention policies for old snapshots. Retention policy options are below.

| Policy        | Value   | restic forget flag | Description                                                                                        |
|---------------|---------|--------------------|----------------------------------------------------------------------------------------------------|
| `name`        | string  |                    | Name of retention policy provided by user. This is used in file groups to refer to a policy.       |
| `keepLast`    | integer | --keep-last n      | Never delete the n last (most recent) snapshots                                                    |
| `keepHourly`  | integer | --keep-hourly n    | For the last n hours in which a snapshot was made, keep only the last snapshot for each hour.      |
| `keepDaily`   | integer | --keep-daily n     | For the last n days which have one or more snapshots, only keep the last one for that day.         |
| `keepWeekly`  | integer | --keep-weekly n    | For the last n weeks which have one or more snapshots, only keep the last one for that week.       |
| `keepMonthly` | integer | --keep-monthly n   | For the last n months which have one or more snapshots, only keep the last one for that month.     |
| `keepYearly`  | integer | --keep-yearly n    | For the last n years which have one or more snapshots, only keep the last one for that year.       |
| `keepTags`    | array   | --keep-tag <tag>   | Keep all snapshots which have all tags specified by this option (can be specified multiple times). [`--tag foo,tag bar`](https://github.com/restic/restic/blob/master/doc/060_forget.rst) style tagging is not supported. |
| `prune`       | bool    | --prune            | If set, actually removes the data that was referenced by the snapshot from the repository.         |
| `dryRun`      | bool    | --dry-run          | Instructs `restic` to not remove anything but print which snapshots would be removed.              |

You can set one or more of these retention policy options together. To learn more, read [here](
https://restic.readthedocs.io/en/latest/manual.html#removing-snapshots-according-to-a-policy).

### spec.backend
To learn how to configure various backends for Restic, please visit [here](/products/stash/0.6.0/guides/backends).

### spec.schedule
`spec.schedule` is a [cron expression](https://github.com/robfig/cron/blob/v2/doc.go#L26) that indicates how often `restic` commands are invoked for file groups.
At each tick, `restic backup` and `restic forget` commands are run for each of the configured file groups.

### spec.resources
`spec.resources` refers to compute resources required by the `stash` sidecar container. To learn more, visit [here](http://kubernetes.io/docs/user-guide/compute-resources/).

### spec.volumeMounts
`spec.volumeMounts` refers to volumes to be mounted in `stash` sidecar to get access to fileGroup paths.

## Backup Repository Structure

 - For workload kind `Deployment`, `Replicaset` and `ReplicationController` restic repo is created in the sub-directory `<WORKLOAD_KIND>/<WORKLOAD_NAME>`. For multiple replicas, only one repository is created and sidecar is added to only one pod selected by leader-election.
 - For workload kind `Statefulset` restic repository is created in the sub-directory `<WORKLOAD_KIND>/<POD_NAME>`. For multiple replicas, multiple repositories are created and sidecar is added to all pods.
 - For workload kind `Daemonset` restic repository is created in the sub-directory `<WORKLOAD_KIND>/<WORKLOAD_NAME>/<NODE_NAME>`. For multiple replicas, multiple repositories are created and sidecar is added to all pods.

## Restic Status
Stash operator updates `.status` of a Restic CRD every time a backup operation is completed. 

 - `status.backupCount` indicated the total number of backup operation completed for this Restic CRD.
 - `status.firstBackupTime` indicates the timestamp of first backup operation.
 - `status.lastBackupTime` indicates the timestamp of last backup operation.
 - `status.lastSuccessfulBackupTime` indicates the timestamp of last successful backup operation. If `status.lastBackupTime` and `status.lastSuccessfulBackupTime` are same, it means that last backup operation was successful.
 - `status.lastBackupDuration` indicates the duration of last backup operation.

## Workload Annotations
For each workload where a sidecar container is added by Stash operator, the following annotations are added:

 - `restic.appscode.com/last-applied-configuration` indicates the configuration of applied Restic CRD.
 - `restic.appscode.com/tag` indicates the tag of `appscode/stash` Docker image that was added as sidecar.

## Updating Restic
The sidecar container watches for changes in the Restic fileGroups, backend and schedule. These changes are automatically applied on the next run of `restic` commands. If the selector of a Restic CRD is changed, Stash operator will update workload accordingly by adding/removing sidecars as required.

## Disable Backup
To stop taking backup, you can do 2 things:

- Delete the Restic CRD. Stash operator will remove the sidecar container from all matching workloads.
- Change the labels of a workload. Stash operator will remove sidecar container from that workload. This way you can selectively stop backup of a Deployment, ReplicaSet, etc.

## Next Steps

- Learn how to use Stash to backup a Kubernetes deployment [here](/products/stash/0.6.0/guides/backup).
- To restore a backup see [here](/products/stash/0.6.0/guides/restore).
- Learn about the details of Recovery CRD [here](/products/stash/0.6.0/concepts/crds/recovery).
- To run backup in offline mode see [here](/products/stash/0.6.0/guides/offline_backup)
- See the list of supported backends and how to configure them [here](/products/stash/0.6.0/guides/backends).
- See working examples for supported workload types [here](/products/stash/0.6.0/guides/workloads).
- Thinking about monitoring your backup operations? Stash works [out-of-the-box with Prometheus](/products/stash/0.6.0/guides/monitoring).
- Learn about how to configure [RBAC roles](/products/stash/0.6.0/guides/rbac).
- Learn about how to configure Stash operator as workload initializer [here](/products/stash/0.6.0/guides/initializer).
- Want to hack on Stash? Check our [contribution guidelines](/products/stash/0.6.0/CONTRIBUTING).
